# helloworlds

./: README.md
cli/: colors.c  log.c
enet/: Makefile  client.c  server.c
fltk/: CMakeLists.txt  test1.cc
gameloop/: Makefile  main.c
gl/: Makefile  README.md  glsl_const.c  glstuff.c  glstuff.h  point.c  point_frag.glsl  point_vert.glsl  stencil.c  triangle.c  triangle_frag.glsl  triangle_vert.glsl
glfw3/: CMakeLists.txt  README.md  main.c
glfw3/glad/include/glad/: glad.h
glfw3/glad/src/: glad.c
haskell/: Makefile  ffi.hs  ffi2.c  ffi_c.c  geometry.hs  hello.hs  names.hs  ppm.hs  ppm2.hs  sexp.hs  trace.hs  unsafe.hs
haskell/ghcjs/: Makefile  code.hs  index.html
iup/: CMakeLists.txt  Makefile  gl.c  hello.c
js/gl0/: Makefile  index.html  prog.js
js/gl1/: Makefile  index.html  prog.js
js/gl2/: game.js  index.html
js/gl2/www/: game.js  index.html
js/glfont0/: game.js  index.html
js/pixi0/: main.html  main.js
js/threejs0/: index.html  script.js
kivy/: button.py
love/: conf.lua  main.lua
ncurses/: Makefile  color.c  press.c  rtlog.c
string.h/: strsep.c  strtok.c  strtok_r.c
vargs/: Makefile  simple.c
